# OMO-Switch

./: .gitignore  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: tray.rs
src-tauri/src/commands/: model_commands.rs  provider_commands.rs
src-tauri/src/services/: config_cache_service.rs  config_service.rs  import_export_service.rs  mod.rs  model_service.rs  preset_service.rs  provider_store.rs  version_service.rs
src/components/Layout/: MainLayout.tsx
src/components/Models/: ProviderStatus.tsx
src/components/Providers/: ApiKeyModal.tsx  CustomProviderModal.tsx
src/pages/: ProviderPage.tsx
src/store/: preloadStore.ts
