[package]
name = "omo-switch"
version = "1.2.14"
description = "OMO Switch Desktop Application"
authors = ["OMO Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
ureq = { version = "2", features = ["json"] }
chrono = "0.4"
tauri-plugin-dialog = "2.6.0"
lazy_static = "1.4"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
dirs = "5"
sha2 = "0.10"
regex = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
json5 = "0.4"
which = "7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
serial_test = "3"
